--- a/gseventh.Html
+++ b/gseventh.Html
@@ -67,7 +67,7 @@ button:hover{
     color: red;
 }
 body{
-    background: url(/home/ashutosh/Desktop/WT-lab-report/uhdpaper.com-download-4k-wallpaper-3840x2160-435.0_b.jpg) no-repeat center;
+    background: url(/home/ashutosh/WT-lab-report/uhdpaper.com-download-4k-wallpaper-3840x2160-435.0_b.jpg) no-repeat center;
     background-position:bottom;
     background-repeat: repeat-y;
     display: flex;
@@ -115,7 +115,7 @@ body{
     <div class="navbar">
         <header>
             <a class="logo" href="index.html">
-                <img src="/home/ashutosh/Desktop/WT-lab-report/istockphoto-1194258443-170667a.jpg" height="50px" width="160px"> 
+                <img src="/home/ashutosh/WT-lab-report/index.png" height="50px" width="160px"> 
             </a>
             <nav>
                 <ul class="navlinks">
@@ -131,7 +131,7 @@ body{
         <div class="content">
             <div class="text-1">Hello,</div>
             <div class="text-2"><span class="a">I'm</span><span class="b"> Ashutosh Poudel</span></div>
-            <div class="text-3">And I'm an <span class="c"><u> Student </u></span></div>
+            <div class="text-3">And I'm  <span class="c"><u> Student </u></span></div>
         </div>
 </section>
     
